add footer and burger

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,17 +1,28 @@
+//colors
 $primary-color: #FF4343;
 $active-color: #E71414;
 $active-color-card: #B90C0C;
 $header-border-color: #BABBC5;
+$description-color: #6C7279;
 $white-color: #fff;
 $slider-bg-color: #5C3249;
 $paginaition-color: #7E5D6F;
 $bg-color: #252B49;
+$footer-bg-color: #353C65;
+$footer-line-color: #2C3154;
+$footer-font-color: #808080;
+
+//font
 $font-family: 'Raleway', sans-serif;
 $font-family-slider: 'Cardo', serif;
+
+//font-weight
 $fw-regular: 400;
 $fw-medium: 500;
 $fw-bold: 700;
 $fw-black: 900;
+
+//font-size
 $fz-13: 13px;
 $fz-14: 14px;
 $fz-18: 18px;
