--- a/src/styles/download.scss
+++ b/src/styles/download.scss
@@ -2,6 +2,9 @@
 @import '_mixins.scss';
 @import '_variables.scss';
 
+.download {
+    font-family: $font-family;
+}
 .download-btn {
     padding-top: 47.71px;
     @include btn;
@@ -10,16 +13,19 @@
     @include btna;
 }
 .download-title{
-    font-family: $font-family;
     font-size: $fz-30;
     font-weight: $fw-medium;
     text-align: center;
     margin-bottom: 22px;
+    @media only screen and (max-width: 320px) {
+        font-size: $fz-18;
+    }
 }
 .download-subtitle {
-    font-family: $font-family;
     font-size: $fz-18;
     font-weight: $fw-bold;
     text-align: center;
-
+    @media only screen and (max-width: 320px) {
+        font-size: $fz-13;
+    }
 }
