--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@
 @import url(./work.scss);
 @import url(./download.scss);
 @import url(./ourteam.scss);
+@import url(./footer.scss);
 *{
     margin: 0;
     padding: 0;
