--- a/src/styles/ourteam.scss
+++ b/src/styles/ourteam.scss
@@ -2,16 +2,63 @@
 @import '_mixins.scss';
 @import '_variables.scss';
 
-.ourteam{
+.ourteam-cards {
     display: flex;
+    font-family: $font-family;
+    @media only screen and (max-width: 320px) {
+        display: block;
+    }
 }
-.ourteam-card__img {
+.person-card {
+    width: 270px;
+    margin-right: 15px;
+}
+.card-4 {
+    margin-right: 0px;
+}
+.ourteam-card__img img{
+    @media only screen and (max-width: 1024px) {
+        width: 227px;
+    }
+    @media only screen and (max-width: 320px) {
+        margin-top: 56px;
+        width: 280px;
+    }
 }
 .ourteam-card__title {
+    margin-top: 30px;
+    font-weight: $fw-bold;
+    font-size: $fz-24;
+    @media only screen and (max-width: 1024px) {
+        font-size: $fz-18;
+    }
 }
 .ourteam-card__subtitle {
+    margin-top: 5.29px;
+    font-weight: $fw-regular;
+    font-size: $fz-18;
+    color: $primary-color;
+    @media only screen and (max-width: 1024px) {
+        font-size: $fz-14;
+    }
 }
 .ourteam-card__description {
+    margin-top: 17.86px;
+    font-weight: $fw-regular;
+    font-size: $fz-18;
+    color: $description-color;
+    @media only screen and (max-width: 1024px) {
+        font-size: $fz-14;
+    }
 }
 .ourteam-card__social {
+    margin-top: 37px;
+}
+.fa-brands {
+}
+.fa-facebook-f {
+}
+.fa-twitter {
+}
+.fa-linkedin {
 }
