--- a/src/styles/testimonials.scss
+++ b/src/styles/testimonials.scss
@@ -6,6 +6,12 @@
     display: flex;
     width: 100%;
     height: 535px;
+    @media only screen and (max-width: 1024px) {
+        height: 365px;
+    }
+    @media only screen and (max-width: 1024px) {
+        display: block;
+    }
 }
 .swiper-slide {
     margin-bottom: 100px;
@@ -29,12 +35,18 @@
     justify-content: center;
     height: 490px;
     background-color: $slider-bg-color;
+    @media only screen and (max-width: 1024px) {
+        padding: 47px 104px 129px 88px;
+    }
 }
 .swiper-slide__description-quote {
     font-family: $font-family-slider;
     font-size: 36px;
     color: $white-color;
     margin-bottom: 29px;
+    @media only screen and (max-width: 1024px) {
+        font-size: $fz-24;
+    }
 }
 .swiper-slide__description-subtitle {
     color: $white-color;
