--- a/src/styles/features.scss
+++ b/src/styles/features.scss
@@ -15,6 +15,7 @@
     @media only screen and (max-width: 320px) {
         grid-template-columns: repeat(1, 100%);
         grid-template-rows: repeat(6, 1fr);
+        grid-row-gap: 41px;
     }
 }
 .feature-card__img {
