--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,6 +20,9 @@
 }
 section {
     margin-bottom: 144px;
+    @media only screen and (max-width: 320px) {
+        margin-bottom: 35px;    
+    }
 }
 .wrapper {
     @include wrapper;
