--- a/src/styles/ourteam.scss
+++ b/src/styles/ourteam.scss
@@ -12,6 +12,9 @@
 .person-card {
     width: 270px;
     margin-right: 15px;
+    @media only screen and (max-width: 320px) {
+        width: 227px;
+    }
 }
 .card-4 {
     margin-right: 0px;
@@ -22,7 +25,6 @@
     }
     @media only screen and (max-width: 320px) {
         margin-top: 56px;
-        width: 280px;
     }
 }
 .ourteam-card__title {
@@ -53,12 +55,4 @@
 }
 .ourteam-card__social {
     margin-top: 37px;
-}
-.fa-brands {
-}
-.fa-facebook-f {
-}
-.fa-twitter {
-}
-.fa-linkedin {
 }
