--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@ $bg-color: #252B49;
 $footer-bg-color: #353C65;
 $footer-line-color: #2C3154;
 $footer-font-color: #808080;
+$font-awesome-color: #C6CBCD;
 
 //font
 $font-family: 'Raleway', sans-serif;
