--- a/src/styles/features.scss
+++ b/src/styles/features.scss
@@ -8,7 +8,7 @@
 }
 .features-cards {
     display: grid;
-    grid-template-columns: repeat(3, 30%);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(1, 1fr);
     grid-row-gap: 100px;
     grid-column-gap: 31px;
