--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -46,6 +46,27 @@ footer {
 }
 .footer-social {
     margin-top: 48px;
+    transition: all .2 ease;
+}
+.fa-brands{
+    display: flex;
+    padding: 10px;
+    margin: 0 13px;
+    width: 39px;
+    height: 39px;
+    font-size: $fz-18;
+    color: $font-awesome-color;
+    border: 2px solid $font-awesome-color;
+    
+    &:hover {
+        color: #d35400;
+        text-shadow: 0 0 25px #d35400;
+        transform: scale(1.3);        
+        box-shadow: 0 0 15px #d35400;
+    }
+}
+.fa-brands a {
+    transition: .5s;
 }
 .footer-copyright {
     @include flex;
