--- a/src/styles/ourteam.scss
+++ b/src/styles/ourteam.scss
@@ -4,6 +4,7 @@
 
 .ourteam-cards {
     display: flex;
+    justify-content: space-between;
     font-family: $font-family;
     @media only screen and (max-width: 320px) {
         display: block;
@@ -11,17 +12,10 @@
 }
 .person-card {
     width: 270px;
-    margin-right: 15px;
-    @media only screen and (max-width: 320px) {
-        width: 227px;
-    }
-}
-.card-4 {
-    margin-right: 0px;
 }
 .ourteam-card__img img{
     @media only screen and (max-width: 1024px) {
-        width: 227px;
+    width: 100%;
     }
     @media only screen and (max-width: 320px) {
         margin-top: 56px;
