--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -16,7 +16,9 @@
         grid-template-rows: repeat(4, 144px);
     }
 }
+
 .work-card__content {
+    overflow: hidden;
     position: absolute;
     width: 25%;
     height: 340px;
@@ -28,6 +30,10 @@
     overflow: hidden;
     &:hover {
         opacity: 1;
+    }
+    &:active {
+        opacity: 1;
+        background-color: #b90c0cbe
     }
     @media only screen and (max-width: 1024px) {
         height: 230px;
